--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,5 @@ spring.jpa.hibernate.ddl-auto=update
 spring.security.user.name=
 spring.security.user.password=
 spring.security.user.roles=admin
+
+spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
