--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,16 @@
+# datasource
 spring.datasource.url=jdbc:mysql://localhost:3306/projectx
 spring.datasource.username=
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+# jpa
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
-
+# security
 spring.security.user.name=
 spring.security.user.password=
 spring.security.user.roles=admin
-
+# mvc
 spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
