28 - added crud operations for contests

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,12 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/projectx
-spring.datasource.username=
-spring.datasource.password=
+spring.datasource.username=root
+spring.datasource.password=zyno
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
-
-spring.security.user.name=
-spring.security.user.password=
+spring.security.user.name=zyno
+spring.security.user.password=zyno
 spring.security.user.roles=admin
-
 spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
