[27]-added userdetails related impl, jwt filter/entrypoint/utils, jwt dependency

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,6 @@ spring.security.user.password=
 spring.security.user.roles=admin
 # mvc
 spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
+# jwt
+projectx.app.jwtSecret=
+projectx.app.jwtExpirationMs=21600
