[27]-registering user, login is still underwork

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,5 +15,5 @@ spring.security.user.roles=admin
 # mvc
 spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
 # jwt
-projectx.app.jwtSecret=projectxSecretKey
+projectx.app.jwtSecret=
 projectx.app.jwtExpirationMs=21600
