--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,11 +1,6 @@
-server:
-  port: ${SERVER_PORT:8080}
-  error:
-    include-stacktrace: never
-
 spring:
   datasource:
-    url: 'jdbc:mysql://${DB_HOST:localhost}:3306/${DB_NAME:projectx}'
+    url: 'jdbc:mysql://localhost:3306/projectx'
     username: ${DB_USERNAME:root}
     password: ${DB_PASSWORD:root}
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -23,8 +18,7 @@ spring:
   mvc:
     pathmatch:
       matching-strategy: ANT_PATH_MATCHER
-
 projectx:
   app:
     jwtSecret: ${JWT_SECRET:secretKey}
-    jwtExpirationMs: ${JWT_EXPIRE_MS:3600000}
+    jwtExpirationMs: '3600000'
