--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,8 @@
+server:
+  port: ${SERVER_PORT:8080}
+  error:
+    include-stacktrace: never
+
 spring:
   datasource:
     url: 'jdbc:mysql://localhost:3306/projectx'
@@ -18,6 +23,7 @@ spring:
   mvc:
     pathmatch:
       matching-strategy: ANT_PATH_MATCHER
+
 projectx:
   app:
     jwtSecret: ${JWT_SECRET:secretKey}
