--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -28,3 +28,5 @@ projectx:
   app:
     jwtSecret: ${JWT_SECRET:secretKey}
     jwtExpirationMs: ${JWT_EXPIRE_MS:3600000}
+    adminEmail: ${ADMIN_EMAIL:admin@gmail.com}
+    adminPassword: ${ADMIN_PASSWORD:admin}
